force-app/main/default/objects/Recurring_Pattern__c/Recurring_Pattern__c.object-meta.xml
<CustomObject>
    <description>Defines a recurring booking pattern linking multiple bookings in a series</description>
    <label>Recurring Pattern</label>
    <nameField>
        <displayFormat>RP-{00000}</displayFormat>
        <label>Pattern Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Patterns</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>