force-app/main/default/objects/Recurring_Pattern__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for the recurring series (alternative to occurrences)</description>
    <label>Series End Date</label>
    <type>Date</type>
</CustomField>