force-app/main/default/objects/Recurring_Pattern__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The event type for this recurring series</description>
    <label>Event Type</label>
    <referenceTo>Event_Type__c</referenceTo>
    <relationshipLabel>Recurring Patterns</relationshipLabel>
    <relationshipName>Recurring_Patterns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>