force-app/main/default/objects/Recurring_Pattern__c/fields/Occurrences__c.field-meta.xml
<CustomField>
    <fullName>Occurrences__c</fullName>
    <description>Total number of occurrences in the series</description>
    <label>Occurrences</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>